--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,5 @@ variables:
 steps:
 - script: dotnet build --configuration $(buildConfiguration)
   displayName: 'dotnet build $(buildConfiguration)'
+- script: python src/example.py
+  displayName: python example script
