fix: multiline doesn't work

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,14 +22,13 @@ stages:
   jobs:
   - job: BuildJob
     steps:
-    - script: |
-      echo Building!
-      cd src
-      install -r requirements.txt
-      export AWS_ACCESS_KEY_ID=ASIAIOSFODNN7EXAMPLE
-      export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
-      export AWS_SESSION_TOKEN=AQoDYXdzEJr...<remainder of security token>
-      aws ec2 describe-instances --region us-west-1
+    - script: echo Building!
+    - script: cd src
+    - script: install -r requirements.txt
+    - script: export AWS_ACCESS_KEY_ID=ASIAIOSFODNN7EXAMPLE
+    - script: export AWS_SECRET_ACCESS_KEY=wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
+    - script: export AWS_SESSION_TOKEN=AQoDYXdzEJr...<remainder of security token>
+    - script: aws ec2 describe-instances --region us-west-1
 - stage: Test
   jobs:
   - job: TestOnWindows
